#604726 : added basic sketch and test